<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Ezzence</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="loading">Loading, please wait</string>
    <string name="unknown">Unknown</string>
    <string name="none">None</string>
    
    <!-- User privileges -->
    <string name="manage_privileges">Manage privileges</string>
    <string name="set_temperature_button_text">Set temperature</string>
    <string name="request_set_temperature_button_text">Request temperature</string>

    <!-- Activity titles -->
    <string name="title_activity_change_pin">Change PIN</string>
    <string name="title_activity_consumption_overview">Consumption Overview</string>
    <string name="title_activity_manage_privileges">Manage Privileges</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_unlock">Unlock</string>

    <!-- Week days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Resources -->
    <string name="gas">Gas</string>
    <string name="water">Water</string>
    <string name="electricity">Electricity</string>

    <!-- Averages -->
    <string name="weekly_averages">Weekly Averages</string>
    <string name="monthly_averages">Monthly Averages</string>

    <!-- Main menu -->
    <string name="set_temperature">Temperature</string>
    <string name="consumption_overview">Consumption overview</string>
    <string name="language">Nederlands</string>

    <!-- Temperature -->
    <string name="main_current_temperare">Current Temperature:</string>
    <string name="main_set_temperare_hint">Set Temperature</string>
    <string name="main_set_temperare">Set</string>
    <string name="main_empty_temperature">Please fill in a temperature</string>
    <string name="main_temperature_not_set">Something went wrong while trying to set the temperature</string>
    <string name="main_temperature_set">Temperature successfully set</string>

    <!-- Session login -->
    <string name="login_userName_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_pin_hint">New Local PIN</string>
    <string name="login_button_text">Login</string>
    <string name="login_empty_userName">Please fill in a user name</string>
    <string name="login_empty_password">Please fill in a password</string>
    <string name="login_pin_too_short">The local pin number should consist of at least 5 digits</string>
    <string name="login_password_encryption_error">Password could not be send securely</string>
    <string name="login_failed">Login failed</string>
    <string name="login_wrong_credentials">User name and password are incorrect</string>
    <string name="login_blocked">This account is temporarily suspended</string>

    <!-- Session logout -->
    <string name="switch_user_button_text">Log out</string>
    <string name="logout_button_text">Log out</string>

    <!-- Session unlock -->
    <string name="unlock_pin_hint">Local PIN</string>
    <string name="unlock_button_text">Unlock</string>
    <string name="unlock_failed">Unlock failed</string>
    <string name="unlock_wrong_pin">Local PIN is incorrect</string>
    <string name="unlock_change_pin_button_text">Change local PIN</string>

    <!-- REST -->
    <string name="rest_not_found">Server connection could not be established</string>

    <!-- Exceptions -->
    <string name="error_unknown_exception">An unknown error occurred</string>
    <string name="tab_content_not_found_exception">No content was found for this tab</string>
    <string name="no_users_found_exception">No users were found</string>
    <string name="set_privilege_failed_exception">Privilege could not be granted</string>

</resources>
