<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1" >
        
        <Button
	        android:id="@+id/remove_temperature_privilege_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/none" />
        
	    <Button
	        android:id="@+id/set_temperature_privilege_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/set_temperature_button_text" />
	
	    <Button
	        android:id="@+id/request_temperature_privilege_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/request_set_temperature_button_text" />
	    
	</LinearLayout>

</TableRow>