<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/loginUserNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/login_userName_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginUserNameEditText"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:ems="7"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButtonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPasswordEditText"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button_text"
        android:onClick="loginButtonClicked" />

</RelativeLayout>